// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm eOYkvJ border-theme-neutral-300"
    type="horizontal"
  />
</DocumentFragment>
`;

exports[`Divider should render a dashed 1`] = `
<div>
  <div
    class="sc-AxjAm hqlXXr border-theme-neutral-300"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal type 1`] = `
<div>
  <div
    class="sc-AxjAm eOYkvJ border-theme-neutral-300"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render vertical type 1`] = `
<div>
  <div
    class="sc-AxjAm jsQKzL border-theme-neutral-300"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical type and large 1`] = `
<div>
  <div
    class="sc-AxjAm hlvmjM border-theme-neutral-300"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical type and small 1`] = `
<div>
  <div
    class="sc-AxjAm iCCswl border-theme-neutral-300"
    type="vertical"
  />
</div>
`;
